syntax = "proto3";
package elestodao.elesto.mint.v1;

option go_package = "github.com/elesto-dao/elesto/v4/x/mint/types";

// Params holds parameters for the mint module.
message Params {
  // mint_denom defines denomination of coin to be minted
  string mint_denom = 1;

  // team address
  string team_address = 6;
}

